<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="mul">*</string>
    <string name="division">/</string>
    <string name="sub">-</string>
    <string name="ac">AC</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="x2">x^2</string>
    <string name="x3">X^3</string>
    <string name="xy">X^Y</string>
    <string name="x_2">²√</string>
    <string name="x_3">³√</string>
    <string name="x_y">√</string>
    <string name="reciprocal">1/X</string>
    <string name="factorial">X!</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="ex">e^x</string>
    <string name="x_10">10^x</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="title_activity_another">anotherActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>