<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:rowCount="6"
                android:columnCount="4"
                tools:ignore="MissingConstraints">
        <TextView
                android:id="@+id/textView"
                android:layout_columnSpan="4"
                android:layout_gravity="fill"
                android:layout_height="100sp"
                android:textSize="40sp"/>

        <Button
                android:id="@+id/ac"
                android:text="@string/ac"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/leftBracket"
                android:text="@string/left"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/rightBracket"
                android:text="@string/right"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/division"
                android:text="@string/division"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/seven"
                android:text="@string/_7"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/eight"
                android:text="@string/_8"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/nine"
                android:text="@string/_9"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/multiplication"
                android:text="@string/mul"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/four"
                android:text="@string/_4"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/five"
                android:text="@string/_5"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/six"
                android:text="@string/_6"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/subtraction"
                android:text="@string/sub"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/one"
                android:text="@string/_1"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/two"
                android:text="@string/_2"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/three"
                android:text="@string/_3"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/add"
                android:text="@string/add"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/zero"
                android:text="@string/_0"
                android:textSize="50sp"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"/>
        <Button
                android:id="@+id/point"
                android:text="@string/point"
                android:textSize="50sp"/>
        <Button
                android:id="@+id/equal"
                android:text="@string/equal"
                android:textSize="50sp"/>


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>